2001-06-07  Derek Price  <dprice@collab.net>

	* sanity.sh (tagf): Use $CVSROOT_DIRNAME rather than
	/tmp/cvs-sanity/cvsroot.

2001-06-06  Derek Price  <dprice@collab.net>

	(Reformatting, bug fixes, tests, and comments to a
	patch from Stephen Cameron <steve.cameron@compaq.com>.)

	* tag.c: (rtag_fileproc, rtag_delete, tag_fileproc)
	  Changed behavior of "cvs tag -F", "cvs tag -d", "cvs rtag -F"
	  and "cvs rtag -d" so that they will not disturb existing 
	  branch tags unless a new "-B" option is given.
	* sanity.sh (tagf-16 - tagf-33): Added tests for new -B option
	  to "cvs tag" and "cvs rtag"

2001-06-06  Derek Price  <dprice@collab.net>

	* sanity.sh (crerepos-6a): Set CVS_RSH=false and only for the actual
	test call at Larry's suggestion.  Also, test the error message since
	it's fixed now.

2001-06-05  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_unlock): Note when breaking someone else's lock.
	(Reported by MURVAI-BUZOGANY Laszlo
	<Laszlo.MURVAI-BUZOGANY@gt-systems.hu>.)
	* sanity.sh (reserved-14): Update to match.

2001-06-05  Derek Price  <dprice@collab.net>

	* sanity.sh (crerepos-6a): Set CVS_RSH=/bin/false...  this is a local
	mode only test anyhow.
	(Thanks to Larry Jones and Morgan Burke <morgan@sitka.triumf.ca>.)

2001-05-31  Derek Price  <dprice@collab.net>

	* sanity.sh (rcs2-7): Add today to the list of failure dates for rcs2-7
	in the hopes that the data will eventually prove useful to someone
	motivated enough to fix the problem.

2001-05-30  Derek Price  <dprice@collab.net>

	* stamp-h2.in: Regenerated.

2001-05-30  Derek Price  <dprice@collab.net>

	* *: Various bug fixes and comments for the following
	patch from Donald Sharp <sharpd@cisco.com>:

	* checkout.c (safe_location): cvs co -d <directory> still had
	failure modes from the way the -d option works.
	* sanity.sh: Misc error message resynching.

2001-05-29  Derek Price  <dprice@collab.net>

	* Makefile.am (cvs_SOURCES): Add root.h.

	* Makefile.in: Regenerated.